# AskData

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: copilot-instructions.md
data/: products.csv  walmart_trustpilot_reviews.csv
docs/: TODO.md  progress.md
evals/: __init__.py  cases.py  harness.py
notebooks/: BI Agent Tests.ipynb  Data Engineer Agent Tests.ipynb  Planner Agent Tests.ipynb  SQL Tests.ipynb
scripts/: load_data.py  load_orders_to_sqlite.py
src/askdata/: __init__.py  agent.py  cli.py  database.py  validator.py
src/askdata/agents/: __init__.py  bi_agent.py  config.py  data_engineer.py  graph.py  planner.py
src/askdata/app/: __init__.py  cli.py
src/askdata/observability/: __init__.py  observability.py
src/askdata/sql/: __init__.py  validator.py
src/askdata/storage/: __init__.py  database.py
tests/: conftest.py  test_agent.py  test_bi_agent.py  test_database.py  test_evals.py  test_graph.py  test_planner.py  test_validator.py
