[project]
name = "askdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zac Burns", email = "zacbburns@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.1.1",
    "jupyter>=1.1.1",
    "lab>=8.10",
    "langchain>=1.3.11",
    "langchain-google-genai>=2.1.12",
    "pandas>=2.3.3",
    "plotly>=6.8.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.1",
]

[project.scripts]
askdata = "askdata:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]
